<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="regionEurope">Europe</string>
  <string name="werfriends">You’re friends</string>
  <string name="MessageMe">Message Me</string>
  <string name="regionAsia">Asia</string>
  <string name="name">Name</string>
  <string name="regionNorthAmerica">North America</string>
  <string name="matches_live_now">Live Now</string>
  <string name="regionAfrica">Africa</string>
  <string name="ok">OK</string>
  <string name="regionSouthAmerica">South America</string>
  <string name="recentInvites">Recent</string>
  <string name="regionOceania">Oceania</string>
  <string name="more">more</string>
  <string name="sendFeedback">Send Feedback...</string>
  <string name="logIn">Log in!</string>
  <string name="hangout_with_friends">Hangout with friends</string>
  <string name="noProviderFound">Connection error. Please try again later.</string>
  <string name="matches">matches</string>
  <string name="active">active</string>
  <string name="loveSports">Love Sports?</string>
  <string name="inviteAndHangout">Invite Friends. Hangout in here!</string>
  <string name="loading">Loading ...</string>
  <string name="newHangout">New Hangout</string>
  <string name="findLeagues">Find Leagues</string>
  <string name="findFixtures">Find Fixture</string>
  <string name="justNow">Just Now</string>
  <string name="hour">hour</string>
  <string name="hours">hours</string>
  <string name="days">days</string>
  <string name="weeks">weeks</string>
  <string name="months">months</string>
  <string name="years">years</string>
  <string name="today">Today</string>
  <string name="tomorrow">Tomorrow</string>
  <string name="yesterday">Yesterday</string>
  <string name="lastWeek">Last Week</string>
  <string name="lastMonth">Last Month</string>
  <string name="lastYear">Last year</string>
  <string name="starting">Starting</string>
  <string name="starts">Starts</string>
  <string name="directMessages">Direct Messages</string>
  <!-- Need to add a line break -->
  <string name="direct_conversation">Send a friend \ndirect messages</string>
  <string name="posting">Posting...</string>
  <string name="error_message_posted">Connection error. Please try again later.</string>
  <string name="error_message_addFriend">Connection error. Please try again later.</string>
  <string name="app_name">PlayUp</string>
  <string name="no_network">Connection error. Please try again later.</string>
  <string name="server_not_found">Connection error. Please try again later.</string>
  <string name="internet_connectivity_dialog">Connection error. Please try again later.</string>
  <string name="no_provider_data">Connection error. Please try again later.</string>
  <string name="logoutText">Confirm Logout of PlayUp</string>
  <string name="anonymous">Log in!</string>
  <string name="login">Log In</string>
  <string name="youarefriends">You\'re friends</string>
  <string name="awaitingforconfirmation">Confirm friend</string>
  <string name="invited">Invitation sent</string>
  <string name="connected">Linked</string>
  <string name="confirm">OK</string>
  <string name="cancel">Cancel</string>
  <string name="my_profile">Profile</string>
  <string name="all_sports">Sports</string>
  <string name="my_sports">My Sports</string>
  <string name="about">About</string>
  <string name="friends">Friends</string>
  <string name="notifications">Notifications</string>
  <string name="menu_invite_friends">Invite Friends</string>
  <string name="menu_edit_profile">Edit Profile</string>
  <string name="menu_all_sports_results">Sports</string>
  <string name="menu_show_leagues">Select League</string>
  <string name="menu_calendar">Calendar</string>
  <string name="loginErrMsg">Connection error. Please try again later.</string>
  <string name="connection_msg">Link your social networks to message your friends around live sport.</string>
  <string name="myleages_title">MY SPORTS</string>
  <string name="connectwith">Link now</string>
  <string name="leagues_msg">Browse sports and pick your \nfavourite leagues</string>
  <string name="sports">Sports</string>
  <string name="mySportsTitle">MY SPORTS</string>
  <string name="mySportsMsg">Pick your sports, create a hangout, invite your friends, message for free.</string>
  <string name="live">LIVE</string>
  <!-- String resource for top bar fragment for Search -->
  <string name="search">Search</string>
  <string name="hangoutEdittextHint">Give it a name...</string>
  <string name="privateDesc">Private - Only those I invite can see it and join		in.</string>
  <string name="publicDesc">Public - Anyone can see it and join in.</string>
  <string name="publicTxt">Public</string>
  <string name="privateTxt">Private</string>
  <string name="create_room">Create a hangout here</string>
  <string name="allSports_results">Sports</string>
  <string name="friendLoginMessage">Link your social networks to message your friends around live sport</string>
  <string name="feedback">Tell us what you think</string>
  <string name="createRoomFailedMsg">Connection error. Please try again later.</string>
  <string name="hangoutText">CREATE A HANGOUT HERE</string>
  <string name="completed">Completed</string>
  <string name="over">OVR</string>
  <string name="zero">0</string>
  <string name="liveNow">Live Now</string>
  <string name="noLive">No Live Matches</string>
  <string name="yousay">You say...</string>
  <string name="friend">friends</string>
  <string name="noMatches">No results</string>
  <string name="thisisyou">This is you!</string>
  <string name="addasafriend">Friend Me</string>
  <string name="recentHangout">RECENT HANGOUTS</string>
  <string name="privateRoomMessage">Sorry this is a Private Hangout</string>
  <string name="your_friends">You\'re Friends</string>
  <string name="sendYouFriendRequest">sent you a friend request.</string>
  <!-- About -->
  <string name="about_text">We\'re a global mobile based social network for sports fans. We cover all the sports you love with real time scoring and free instant messaging for you and your friends. Pick your sport, invite your friends and hang out during the live action.</string>
  <string name="feedback_subject">PlayUp Android Feedback</string>
  <string name="feedback_mail_id">feedback@PlayUp.com</string>
  <!-- Provider -->
  <string name="provider_messsage">Link your social \nnetworks to message \nyour friends around \nlive sports</string>
  <!-- Need to add a line break -->
  <string name="noPostMessagesLeftText">Invite \nfriends.</string>
  <!-- Need to add a line break -->
  <string name="noPostMessagesRightText">Message in \nreal time.</string>
  <string name="notification_err ">Connection error. Please try again later.</string>
  <string name="notification_welcome">Welcome to PlayUp!</string>
  <string name="notification_welcome_desc">Link your social networks to message your friends around live sport.</string>
  <string name="accepted">Accepted</string>
  <string name="ignored">Ignored</string>
  <string name="done">Done</string>
  <string name="min">min</string>
  <string name="mins">mins</string>
  <string name="no_playup_friend_str">Before you can send a direct message, you need to invite some friends to hangout in Playup.</string>
  <string name="pleasewait">Just a sec…</string>
  <string name="post">Post</string>
  <!-- Updated String  -->
  <string name="runrate">RR</string>
  <string name="lastball">L\'Ball</string>
  <string name="home">Home</string>
  <string name="name_this_gp">NAME THIS GROUP</string>
  <string name="private_lobby_default_text">This is your private hangout. Give it a title.</string>
  <string name="createNewGroup">CREATE A NEW GROUP</string>
  <string name="privateLobbyRoomDesc">Groups you create here are private.\nConversations are between you and your \nfriends</string>
  <string name="privateLobbyHint">Give it a Name...</string>
  <string name="startConversation">Start the \n conversation</string>
  <string name="privateLobbyMessage11">Get Involved!</string>
  <string name="privateLobbyMessage12">What\'s your opinion?</string>
  <string name="privateLobbyMessage21">Love sport?</string>
  <string name="privateLobbyMessage22">Follow the action</string>
  <string name="privateLobbyRoomMessage">SELECT ONE OF YOUR LIVE SPORTS\nFROM BELOW</string>
  <string name="confirmFriend">Confirm Friend</string>
  <string name="noFavLiveSport_header">NO FAVOURITES</string>
  <string name="noFavLiveSport_content">GO AND FAVOURITE SOME SPORTS!</string>
  <string name="noFavouriteSport_header">NONE OF YOUR FAVOURITE SPORTS ARE LIVE</string>
  <string name="noFavouriteSport_content">ADD MORE?</string>
  <string name="edit_room">Edit</string>
  <string name="create_private_room">New Group</string>
  <string name="awaiting">AWAITING\nRESULTS</string>
  <string name="awaitingResults">Starting soon</string>
  <string name="editLobbyRoomDesc">Edit your group name</string>
  <string name="menu_sports">Sports &amp; Scores</string>
  <string name="noAdditionalMatches">NO ADDITIONAL GAMES</string>
  <string name="postGameScoresMsg">Post game scores only</string>
  <string name="setRegion">Set region</string>
  
  <string name="shareFailure">Share failed</string>
  <string name="shareResponse">Share successful</string>
  <string name="upcoming">Upcoming</string>
  <string name="updateVersion">A new version of PlayUp is available. Please update now.</string>
  <string name="update_region">Update your region</string>

  <string name="feature_text">FEATURED</string>
  <string name="favourite_text">FAVOURITES</string>
  <string name="mysocial_title">MY SOCIAL NETWORKS</string>
  <string name="logout">Log Out</string>
  <string name="set_region">Set Region</string>
  
 
   <string name="game_centre">Game Centre</string>
   <!--  updated string -->
   <string name="shareDialogTitle">Share score via</string>
   <string name="dateFormat">dd MMM</string>
   
    <!--  new strings -->
   <string name="app_refreshing">Please wait! Application is refreshing.</string>
   <string name="error">Error!</string>
   <string name="please_try_again">Please try again.</string>
   <string name="try_again">Try Again</string>
   <string name="quit">Quit</string>
   <string name="radio_network_error">Network not connected</string>
  
</resources>
