<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F7F7F4" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <!-- View which contains edittext field in a white background -->

		<RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="30dip"
                android:layout_marginLeft="22dip"
                android:layout_marginRight="22dip"
                android:layout_marginBottom="10dip"
                android:visibility="visible" >

                <EditText
                    android:id="@+id/hangoutEdittext"
                    style="@style/hangoutEdittext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:hint="@string/privateLobbyHint"
                    android:singleLine="true" 
                    android:focusable="true"
                    android:focusableInTouchMode="true"                 
                    android:autoText="true"
                    android:maxLength="30"
                    android:paddingLeft="8dip"
                    android:paddingRight="8dip"
                    android:paddingBottom="4dip"
                    android:text=""/>

                <View
                    android:id="@+id/bottomLine"
                    android:layout_width="fill_parent"
                    android:layout_height="0.8dip"
                    android:layout_below="@+id/hangoutEdittext"
                    android:background="#C0C0C0" />

                <View
                    android:layout_width="0.8dip"
                    android:layout_height="8dip"
                    android:layout_above="@+id/bottomLine"
                    android:layout_alignParentRight="true"
                    android:background="#C0C0C0" />

                <View
                    android:layout_width="0.8dip"
                    android:layout_height="8dip"
                    android:layout_above="@+id/bottomLine"
                    android:layout_alignParentLeft="true"
                    android:background="#C0C0C0" />
            </RelativeLayout>

                <TextView
                    android:id="@+id/characterCount"
                    style="@style/lobbyCharCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingRight="10dip"
                    android:paddingTop="2dip"
                    android:text="30" />
                
            <!-- View which contains switch field in a grey background -->

			<LinearLayout 
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:orientation="horizontal"
			    android:layout_marginTop="-10dip"
			    android:layout_marginLeft="15dip">
	              <ImageView 
		                android:id="@+id/homeButton"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:src="@drawable/edit_home_icon"
		                android:layout_gravity="center_vertical"/>
	
		            <TextView
		                android:id="@+id/privateDesc"
		                style="@style/createPrivateLobbyDesc"
		                android:layout_toRightOf="@id/homeButton"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:layout_marginLeft="10dip"
						android:gravity="center_vertical"
		                android:text="@string/privateLobbyRoomDesc"
		                 />
            </LinearLayout>
                 <Button
		                android:id="@+id/doneButton"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:layout_marginRight="10dip"
		                android:layout_marginTop="40dip"
		                android:text="@string/done"
		                android:textColor="#FFFFFF" 
		                android:textStyle="bold"
		                android:paddingLeft="4dip"
		                android:paddingRight="4dip"
		                android:background="@drawable/done_selector"
		                android:enabled="false" />
                     
        </LinearLayout>
    </ScrollView>

</RelativeLayout>