<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <!-- My sports panel Starts -->

    <RelativeLayout
        android:id="@+id/mysports_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/mysports_image"
            android:layout_width="fill_parent"
            android:layout_height="200px"
            android:layout_centerInParent="true"
            android:scaleType="fitXY" />


        <ImageView
            android:id="@+id/mysports_default"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_sport_image"
            android:scaleType="fitXY" />

        <RelativeLayout
            android:id="@+id/mySportsPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/mysports_default"
            android:layout_alignLeft="@+id/mysports_default"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/mysports_default"
            android:layout_alignTop="@+id/mysports_default"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="7dip"
            android:paddingBottom="7dip" >

            <TextView
                android:id="@+id/mySportsPanelTitle"
                style="@style/User_Options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                 android:visibility="invisible"
                android:text="@string/mySportsTitle" />

            <LinearLayout
                android:id="@+id/mySportsStarBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mySportsPanelTitle"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dip"
                android:background="@drawable/my_sport_star_base"
                 android:visibility="invisible"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/mySportsStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/fav_star_selected" />

                <TextView
                    android:id="@+id/totalMySports"
                    style="@style/User_Options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="5dip"
                    android:text="5" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/mysportsProgressbar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingBottom="10dip" android:layout_alignBottom="@+id/mySportsPanelMsg">

            <TextView
                android:id="@+id/mySportsLiveImage"
                style="@style/live"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/live_icon"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:gravity="center"
                android:text="@string/live"
                 android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/mySportsPanelMsg"
            style="@style/mySportsMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/mysports_default"
            android:layout_marginLeft="50dip"
            android:layout_marginRight="50dip"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="-5dip"
            android:paddingBottom="30dip"
            android:text="@string/mySportsMsg" />

        <ImageView
            android:id="@+id/mysportChevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dip"
             android:visibility="invisible"
            android:src="@drawable/my_sport_chevron" />
    </RelativeLayout>
    <!-- My sports panel Ends -->

</RelativeLayout>