<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     android:orientation="vertical">

    
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
     	android:orientation="vertical" 
     	android:paddingLeft="5dip" 
     	android:paddingRight="5dip">
    
    <!-- header text -->

    <RelativeLayout
        android:id="@+id/activeUserMainLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dip">

         <TextView
             android:id="@+id/active_users_text"
             style="@style/activt_user_no"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
             android:text="@string/recentInvites" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/friend_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_base_top" >

        <!-- UI for Image Avtar -->

      
        <RelativeLayout
            android:id="@+id/avatarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="3dip">

             <ImageView 
                   android:layout_width="wrap_content"
            	   android:layout_height="wrap_content"
            	   android:background="@drawable/blank_avatar"
                />
            <ImageView
                android:id="@+id/imageViewpostAvatar"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_marginLeft="9.2dp"
                android:layout_marginTop="3.8dp"/>
        </RelativeLayout>
        
        

        <!-- End of Image Avatar -->


        <!-- Middle view Starts -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@id/avatarView"
            android:layout_toLeftOf="@id/rightView">

            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nomatches"
                android:text="@string/noMatches"
                android:visibility="gone"
                style="@style/nomatches"
                android:layout_centerVertical="true"
                />
            <!-- Middle view - user main view -->

            <RelativeLayout
                android:id="@+id/userMainView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/providerImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                      android:layout_marginTop="10dip"
                       android:src="@drawable/home_icon" />

                <TextView
                    android:id="@+id/userNameText"
                    style="@style/matchRoomUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_marginLeft="7dip"
                    android:layout_marginTop="7dip"
                    android:layout_toRightOf="@id/providerImage"
                    android:singleLine="true"
                    android:ellipsize="end"
                     android:text="Aaronman how are you doihgn frwerwerwe wrwer we" />
            </RelativeLayout>

            <!-- Middle view - user sub view -->

            <RelativeLayout
                android:id="@+id/userSubView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userMainView" >

                <ImageView
                    android:id="@+id/greenDot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="3dip"
                    android:src="@drawable/green_dot"
                     />

                <TextView
                    android:id="@+id/userNameSubText"
                    style="@style/userNameSubText"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                   android:layout_marginLeft="12dip"
                    android:layout_toRightOf="@id/greenDot"
                     android:ellipsize="end"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="Aaron Edwards " />
            </RelativeLayout>
        </RelativeLayout>
        <!-- Middle view ends -->

        <RelativeLayout
            android:id="@+id/rightView"
            android:layout_width="45dip"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            >

      <ProgressBar
                android:id="@+id/friendProgress"
                 style="@android:style/Widget.ProgressBar.Inverse"
                android:layout_width="35dip"
                android:layout_height="35dip"  
                android:layout_centerInParent="true"
               
                 />


            <ImageView
                android:id="@+id/greenTickImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/green_tick" />
            
            <ImageView
                android:id="@+id/connectPlusImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/connect_plus"
                android:visibility="gone" />
            
        </RelativeLayout> 
    </RelativeLayout>
    </LinearLayout>     
   
    <RelativeLayout
        android:id="@+id/friendGapLinearView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gap_image" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingRight="15dip" >
            
            <LinearLayout
                android:id="@+id/gapTextLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/friendGapTextView"
                    style="@style/gapNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/friendGapMoreTextView"
                    style="@style/gapText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-8dip"
                    android:text="@string/more" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/gapProgress"
                android:layout_width="35dip"
                android:layout_height="35dip"
                android:layout_gravity="center_vertical|center_horizontal"
                android:visibility="gone" />
            
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>